--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-# Async Log Analyzer
+Async Log Analyzer
 
 Учебный проект (Endterm): асинхронная система мониторинга и анализа логов.
 
-## Цель
+Цель
 
 Показать использование:
 - асинхронного программирования (`asyncio`);
@@ -12,9 +12,10 @@
 - пользовательских исключений;
 - модульной архитектуры проекта.
 
-## Формат лог-файла
+Формат лог-файла
 
 Каждая строка должна иметь вид:
 
 ```text
 [YYYY-MM-DD HH:MM:SS] [LEVEL] Message text...
+
